--- a/css/master.css
+++ b/css/master.css
@@ -62,7 +62,7 @@ nav {
     background-color: #f9f9f9;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 110vh;
     position: relative;
     width: 100%;
   }
@@ -84,7 +84,7 @@ nav {
     align-items: center;
     display: flex;
     gap: 10rem;
-    height: 65rem;
+    height: 70rem;
     justify-content: center;
     position: relative;
   }
@@ -167,8 +167,8 @@ nav {
     border-right: 2px solid rgba(45,46,50,.5);
     color: #2d2e32;
     font-family: Mulish,sans-serif;
-    font-weight: 600;
-    margin-right: 5rem;
+    font-weight: 750;
+    margin-right: 4rem;
     padding-right: 2rem;
   }
   
@@ -177,6 +177,14 @@ nav {
     flex-wrap: wrap;
     gap: 3rem;
     list-style: none;
+  }
+
+  .skills ul li:hover {
+    transform: scale(1.05);
+    background-color: #faf5f5;
+    color: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   }
 
   .skills ul li{
@@ -200,7 +208,7 @@ nav {
     border-right: 2px solid rgba(45,46,50,.5);
     color: #2d2e32;
     font-family: Mulish,sans-serif;
-    font-weight: 600;
+    font-weight: 750;
     margin-right: 3rem;
     padding-right: 2rem;
   }
@@ -211,6 +219,14 @@ nav {
     gap: 3rem;
     list-style: none;
   }
+
+  .certifications ul li:hover {
+    transform: scale(1.05);
+    background-color: #faf5f5;
+    color: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  } 
 
   .about {
     background-color: #fff;
@@ -387,7 +403,7 @@ nav {
   }
 
   .contact {
-    background-color: #fff;
+    background-color:  #f9f9f9;
     padding: 11rem 0;
   }
 
