--- a/css/master.css
+++ b/css/master.css
@@ -341,7 +341,7 @@ nav {
     background-color: #fff;
     padding: 2rem; 
   }
-  
+
   .article-title h2 {
     color: #2d2e32;
     font-size: 2.5rem;
@@ -375,6 +375,7 @@ nav {
   .article-list a {
     color: #007bff; 
     text-decoration: none;
+    line-height: 2rem;  
   }
   
   .article-list a:hover {
