Refactored code for better readability

--- a/css/master.css
+++ b/css/master.css
@@ -173,7 +173,7 @@ nav ul a {
 }
 
 .hero-img {
-  background-image: url('../images/sohaibimg.jpg');
+  background-image: url('../images/sohaibimg.jpeg');
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
