--- a/css/master.css
+++ b/css/master.css
@@ -383,7 +383,13 @@ nav ul a {
   @media (max-width: 768px) {
    .text-side h4 {
        text-align: center;
-  }
+   }
+   .text-side h3 {
+       text-align: center;
+   }
+   .text-side p{
+       text-align: center;
+   }
  }
 
 .text-side p {
@@ -482,7 +488,7 @@ nav ul a {
 
 .article-list p{
   font-family: sans-serif;
-  font-weight: 600;
+  font-weight: 500;
 } 
 
 .contact {
